label spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1555,7 +1555,7 @@ a:hover .info-card .svg-arrow {
     display: block;
     position: relative;
     padding-left: 42px;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
     padding-top: 5px;
     cursor: pointer;
     font-size: .875rem;
@@ -1563,6 +1563,10 @@ a:hover .info-card .svg-arrow {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.container-input + p {
+    margin-top: -10px !important;
 }
 
 .container-input input,
@@ -1699,6 +1703,6 @@ table thead th {
     color: var(--color-default);
 }
 
-.table-tr-border-btm{
+.table-tr-border-btm {
     border-bottom: 1.5px solid var(--color-default);
 }
